# QRCode_Detection-in-Using-OpenCV

./: .publishingnode.h.swp  CMakeLists.txt  README.md  camcontrollermanager.cpp  camcontrollermanager.h  cmake_install.cmake  global.h  locationpublisherservice.cpp  locationpublisherservice.h  main.cpp  publisherservice.h  publishingnode.h  qrscanner.cpp  qrscanner.h
